# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [4.0.1] - 2022-03-14

### Added

- Status de Roleta `/status roleta`

### Changed

- Agora o botão de fechar comando possui um texto para ser mais claro
- Dificuldade de subir de nível foi aumentado para `1.62`
- Tempo de resposta da Dungeon foi aumentado para `20s`
- Chance de critico de inimigos foi alterada. **1x**: `70%` -> `75%`. **1.3x:** `16%` -> `11%`

### Fixed

- Árvore de Habilidades do Assassino estava com uma ordem errada
- Opção de abençõar status com pontos maior que 15, bloqueando o usuário de usar mais bênçãos
- Erros de português no comando `/ship`
- O valor de lucro da roleta foi ajustado para todas apostas que duplicava o valor real.
- Erros do RPG: Muitos erros aconteciam como 'Cannot read [0] of undefined'. Isso foi resolvido com um novo sistema de interações que, eu creio, que vão arrumar o problema, que era causado por lags entre a Menhera e o Discord
- Habilidades ignoravam a chance de acerto, fazendo com que sempre acertassem, mesmo que o usuário a errasse
- Habiliades de cura não ultrapassam mais o limite de vida

### Removed

- Colocação do usuário no top ao caçar

## [4.0.H-BETA] - 2022-03-01

### Added

- Os comandos do RPG agora tem um botão extra para terminar o comando na hora para não ter que esperar o tempo de execução para utilizar outro comando
- Adicionado a **Biblioteca de Boleham** dentro do comando `/centro`. Lá é possível acessar as enciclopédias do mundo para ter informações sobre objetos do RPG. Atualmente é possivel ver informações das habildiades lá. Você pode pesquisar habilidades por ID ou mesmo pelo **NOME** delas.

### Fixed

- Ao fugir da Dungeon, você recebe o cooldown da Dungeon
- O botão vender tudo no centro ta funcionando